Fix mistmached |GetDisplayNearest{Window,View}| param type

Fixes the mismatched parameter type (gfx::Native{Window,View})
used for |display::Screen::GetDisplayNearest{Window,View}| in
ash. This does not make any functional difference since
gfx::NativeWindow and NativeView are of same type when aura
is on. The changes are just for correctness' sake.

BUG=699891

Review-Url: https://codereview.chromium.org/2804523002
Cr-Commit-Position: refs/heads/master@{#462449}

Former-commit-id: e18e618f9e27b12ad26277f7a692766b513694a7